--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eduvisiontest",
+  "name": "eduvision",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
+    "@react-native-firebase/app": "^14.9.4",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/material-top-tabs": "^6.1.1",
     "@react-navigation/native": "^6.0.6",
