--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18.0.0",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-onboarding-swiper": "^1.2.0",
     "react-native-pager-view": "^5.4.11",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "~3.8.0",
