--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
     "@react-native-firebase/app": "^14.9.4",
+    "@react-native-firebase/auth": "^14.9.4",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/material-top-tabs": "^6.1.1",
     "@react-navigation/native": "^6.0.6",
@@ -34,7 +35,8 @@
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.1",
     "rn-fetch-blob": "^0.12.0",
-    "three": "^0.139.1"
+    "three": "^0.139.1",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
