--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.6",
     "@react-native-community/cli-platform-android": "3.0.3",
+    "@react-native-community/netinfo": "^9.0.0",
     "@react-native-firebase/app": "^14.11.0",
     "@react-native-firebase/auth": "^14.11.0",
     "@react-navigation/bottom-tabs": "^6.3.1",
