[feat]:Create reusable Eduvision Text

--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
     "@react-native-async-storage/async-storage": "^1.17.6",
     "@react-native-community/cli-platform-android": "3.0.3",
     "@react-native-community/netinfo": "^9.0.0",
-    "@react-native-firebase/app": "^14.11.0",
-    "@react-native-firebase/auth": "^14.11.0",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
@@ -34,12 +32,17 @@
     "@babel/core": "^7.15.0",
     "@babel/runtime": "^7.15.3",
     "@react-native-community/eslint-config": "^3.0.0",
+    "@types/jest": "^28.1.6",
+    "@types/react": "^18.0.15",
+    "@types/react-native": "^0.69.5",
+    "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^27.0.6",
     "eslint": "^7.32.0",
     "jest": "^27.0.6",
     "metro-react-native-babel-preset": "^0.66.2",
     "react-native-codegen": "^0.0.7",
-    "react-test-renderer": "17.0.2"
+    "react-test-renderer": "17.0.2",
+    "typescript": "^4.7.4"
   },
   "jest": {
     "preset": "react-native"
